# hw8_mongoDB

./: README.md  consumer.py  contacts_handlers.py  crud.py  models.py  producer.py  pyproject.toml  requirements.txt  search_quotes.py  send_data.py  services.py
